App-blog-rocketseat-maps

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog-react-native-maps",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -10,15 +10,23 @@
   },
   "dependencies": {
     "expo": "~46.0.16",
+    "expo-location": "~14.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-maps": "^1.3.2",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^29.2.0",
+    "@types/react": "^18.0.23",
+    "@types/react-native": "^0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "typescript": "^4.8.4"
   },
   "private": true
 }
